manifests/networking/GlobalNetworkLog.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: allow-ingress
spec:
  ingress:
    - action: Allow
      protocol: TCP
