manifests/networking/bookinfo-network.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress
spec:
  ingress:
    - action: Allow
      protocol: TCP
      source:
        - "*"
      destination:
        - "*"
