manifests/networking/guestbook_allow-everything-ns.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: allow-guestbook-service
  # namespace: istio-system
  namespace: guestbook
spec:
  # selector: projectcalico.org/name == 'guestbook'
  ingress:
    # Allow access to 80 from istio-system
    # - action: Allow
    #   protocol: TCP
    #   source:
    #     namespaceSelector: projectcalico.org/name == 'istio-system'
    #   destination:
    #     namespaceSelector: projectcalico.org/name == 'guestbook'
    #     ports:
    #       - 80

    # Allow everything in guestbook
    - action: Allow
      protocol: TCP
      source:
        namespaceSelector: projectcalico.org/name == 'guestbook'
      destination:
        namespaceSelector: projectcalico.org/name == 'guestbook'

  egress:
    # Allow everything in guestbook
    - action: Allow
      protocol: TCP
      source:
        namespaceSelector: projectcalico.org/name == 'guestbook'
      destination:
        namespaceSelector: projectcalico.org/name == 'guestbook'

    # Allow DNS
    - action: Allow
      protocol: UDP
      source:
        namespaceSelector: projectcalico.org/name == 'guestbook'
      destination:
        namespaceSelector: projectcalico.org/name == 'kube-system'
        ports:
          - 53
    - action: Allow
      protocol: TCP
      source:
        namespaceSelector: projectcalico.org/name == 'guestbook'
      destination:
        namespaceSelector: projectcalico.org/name == 'kube-system'
        ports:
          - 53
